# navtech-radar-slam

./: .gitignore  .gitmodules  README.md
launch/: navtech_radar_slam_mulran.launch
odometry/yeti_radar_odometry/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
odometry/yeti_radar_odometry/docker/: Dockerfile  docker_build.sh
odometry/yeti_radar_odometry/include/: association.hpp  features.hpp  radar_utils.hpp
odometry/yeti_radar_odometry/launch/: yeti_radar_odometry.launch
odometry/yeti_radar_odometry/rviz/: yeti_pgo_rviz.rviz
odometry/yeti_radar_odometry/scripts/: download_data.sh  evaluate_odometry.py  get_localization_accuracy.py  get_radar_loc_gt.py  multiple.sh  plot_scan_matching_accuracy.py
odometry/yeti_radar_odometry/src/: association.cpp  features.cpp  localization.cpp  odometry.cpp  radar_utils.cpp  save_cartesians.cpp  showcase_distortion.cpp  test_motiondistortion.cpp  visualization.cpp
pgo/SC-A-LOAM/: CMakeLists.txt  package.xml
pgo/SC-A-LOAM/launch/: sc_pgo.launch
pgo/SC-A-LOAM/src/: laserPosegraphOptimization.cpp
